--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -19,16 +19,20 @@ jobs:
           architecture: x64
 
       - name: Install Linter
-        ##TODO
+        run: mvn clean validate
 
       - name: Run Checkstyle
-        ##TODO
+        run: mvn checkstyle:check
 
       - name: Upload Checkstyle Result
-        ##TODO
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: checkstyle-result
+          path: target/checkstyle-result.xml
 
       - name: Run Maven Test
-        ##TODO
+        run: mvn test
 
       - name: Jacoco Report
-        ##TODO
+        run: mvn jacoco:report
