--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -36,3 +36,10 @@ jobs:
 
       - name: Jacoco Report
         run: mvn jacoco:report
+
+      - name: Upload Jacoco Coverage Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/
